[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
